# building-calculator-2

./: .gitignore  README example.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  splash.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_integration.rs  lib.rs  main.rs  startup_log.rs  windows_integration.rs
src/components/: BreezePanel.tsx  BuildingsPanel.tsx  ConcretePanel.tsx  ConfigPanel.tsx  EquipmentPanel.tsx  ErrorBoundary.tsx  HardwarePanel.tsx  LandPrepPanel.tsx  LogisticsTimePanel.tsx  ManpowerPanel.tsx  PlannerShell.tsx  ReactorsPanel.tsx  SummarySection.tsx
src/components/planner/: DisciplineQuoteBar.tsx  LineItemTable.tsx  QuoteClassificationBar.tsx  QuoteTotalsBanner.tsx  formatters.ts  ui.tsx
src/domain/: blockTypes.ts  concreteKinds.ts  plannerConfig.ts
src/domain/calculate/: breezeBlock.ts  concrete.ts  equipment.ts  landPrep.ts  lineItemPresets.ts  lineItems.ts  manpower.ts  quoteRollup.ts  reactors.ts  sweetSand.ts
src/io/: constructionPdfExport.ts  desktopIntegration.ts  pdfDisciplineSections.ts  pdfHelpers.ts  projectFile.ts  runtime.ts  saveLoad.ts
src/store/: projectStore.ts
