[package]
name = "gdt_construction_planner"
version = "1.1.0"
description = "GDT Construction Planner — desktop construction estimate suite"
edition = "2021"

[lib]
name = "gdt_construction_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
url = "2"
